# mdllama

./: .gitignore  README.md  RELEASE  debug_hackclub_models.py  install.sh  mdllama.py  uninstall.sh
.github/workflows/: build-deb.yml  publish-to-pypi.yml  sync-readme.yml  trigger-ppa-build-beta.yml  trigger-ppa-build.yml  update-beta-release-file.yml  update-release-file.yml
assets/: demo.webm
man/: mdllama.1
src/: README.md  mdllama.py  pyproject.toml  requirements.txt  setup.py
src/from_my_other_repo/: build-deb.sh  build-rpm.sh
src/mdllama/: __main__.py  cli.py  main.py  ollama_client.py  openai_client.py  release.py  session.py  version.py  web_search.py
src/mdllama/tui/: __init__.py  app.py  app_old.py  chat_edit.py  chat_export.py  config.py  image_browser.py  log_viewer.py  mcp_prompt.py  mdllama.tcss  ollamaclient.py  openai_llm.py  pull_model.py  utils.py
src/mdllama/tui/screens/: chat_edit.py  chat_export.py  chat_rename.py  log_viewer.py  pull_model.py  splash.py
src/mdllama/tui/store/: store.py
src/mdllama/tui/store/upgrades/: __init__.py  v0_1_6.py  v0_3_0.py
src/mdllama/tui/tools/: __init__.py  date_time.py  external.py  shell.py  think.py
src/mdllama/tui/tools/mcp/: client.py  logging.py  prompts.py  sampling.py  setup.py  tools.py
src/mdllama/tui/widgets/: __init__.py  chat.py  chat_item.py  prompt.py  prompt_input.py  tool_select.py
