[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdllama"
version = "20250818.2"
description = "A command-line interface for Ollama API"
authors = [{ name = "QinCai-rui" }]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.7"
dependencies = [
  "requests",
  "ollama",
  "colorama",
  "rich",
  "beautifulsoup4"
]

[project.scripts]
mdllama = "mdllama.main:main"
